test: enhance controller and service layer code coverage
- Rewrote and expanded tests for PerformanceReviewController, GoalController, and EmployeeController to cover all endpoints and edge cases.
- Improved coverage for PerformanceReviewServiceImpl, GoalServiceImpl, and EmployeeServiceImpl by adding missing branch tests, validation logic checks, and exception handling scenarios.
- Fixed existing test failures related to incorrect DTO mapping, missing mock setups, and unhandled NPEs.
- Resolved compilation issues regarding enum access and DTO properties.
- Passed all 561 unit tests successfully with improved JaCoCo coverage metrics.